2008-11-27  Albert Chu <chu11@llnl.gov>

	* ipmi-sel/src/ipmi-sel-entry.c (ipmi_sel_get_entry): Fix output
	corner case.

	* ipmimonitoring/: Add system ACPI power state and button switch
	interpretations.  Add forgotten bitmasks.  Fix config file option
	names.
	
	* ipmimonitoring/: Add new interpretations, button switch state,
	entity presence device install, processor state.

2008-11-26  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/: Additional documentation updates.

	* ipmi-sensors/src/ipmi-sensors-reading.c (sensor_reading): Output
	'NA' is sensor scanning is disabled.

	*
	ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sensor_reading.c
	(_get_sensor_reading): Return 'unreadable sensor' for sensors
	where sensor scanning is disabled.

	* ipmimonitoring/: Add new interpretations, power supply state,
	drive slot state, drive slot predictive failure.

	* ipmiconsole/src/ipmiconsole.c (main): Fix workaround bug.

	* common/src/toolcommon/tool-cmdline-common.h,
	common/src/toolcommon/tool-cmdline-common.c
	(parse_workaround_flags), common/src/toolcommon/tool-common.c
	(ipmi_open), ipmiconsole/src/ipmiconsole/ipmiconsole.c (main),
	ipmipower/src/, libfreeipmi/include/freeipmi/api/ipmi-api.h,
	libfreeipmi/src/api/ipmi-api.c (ipmi_ctx_open_outofband_2_0),
	ipmimonitoring/src/ipmimonitoring/ipmimonitoring.c
	(_grab_ipmimonitoring_options): Remove workaround flags unused in
	libfreeipmi.  Make tool specific workarounds specific to tools.

	* ipmi-sel/src/: When retrieving SEL entries, always try to obtain
	a reservation ID.
	
2008-11-25  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/ipmi_monitoring_sensors.conf.5.pre.in,
	ipmimonitoring/ipmimonitoring_sensors.conf.5.pre.in,
	ipmimonitoring/ipmimonitoring.conf.5.pre.in,
	ipmimonitoring/libipmimonitoring.conf.5.pre.in, : New files.

	* ipmimonitoring/ipmimonitoring.8.pre.in,
	ipmimonitoring/libipmimonitoring.3.pre.in: Update for new manpage.

	* configure.ac, freeipmi.spec.in, ipmimonitoring/Makefile.am: