@@ -10,6 +10,9 @@
 	* ipmimonitoring/: Add new interpretations, button switch state,
 	entity presence device install, processor state.
 
+	* libfreeipmi/src/util/ipmi-sensor-and-event-code-tables-util.c/:
+	Fix event message data2 output corner cases.
+
 2008-11-26  Albert Chu <chu11@llnl.gov>
 
 	* ipmimonitoring/: Additional documentation updates.
